test/libhyperion/syntaxTests/nameAndTypeResolution/410_string_literal_not_convertible_to_address_as_assignment.hyp
// A previous implementation claimed the string would be an address
contract AddrString {
    address public test = "ZCA35b7d915458EF540aDe6068dFe2F44E8fa733c";
}
// ----
// TypeError 7407: (116-159): Type literal_string "ZCA35b7d915458EF540aDe6068dFe2F44E8fa733c" is not implicitly convertible to expected type address.
